--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -1,6 +1,7 @@
 {
   "name": "proyecto",
   "version": "1.0.0",
+  "type":"module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
